  valued parameters in the query string
* (bug 34735) Updated compressOld.php documentation to mention the different
  usages of -s and -n parameters depending on compression type
* (bug 13896) Rendering of devanagari numbers in automatic '#' number lists
* (bug 18704) Add an unique CSS class or ID to the tagfilter table row at RecentChanges 

=== API changes in 1.20 ===
* (bug 34316) Add ability to retrieve maximum upload size from MediaWiki API.
* (bug 34313) MediaWiki API intro message about "HTML format" should mention
  the format parameter.

=== Languages updated in 1.20 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* (bug 34192) Namespace gender aliases for Albanian languages (sq & aln)
* (bug 35541) Namespace gender aliases for Croatian (hr)
* Mizo (lus) added

=== Other changes in 1.20 ===
* The user_token field is now left empty until a user attempts to login and
  cookies need to be set. It is also now possible to reset every user's
  user_token simply by clearing the values in the user_token column.

== Compatibility ==

MediaWiki 1.20 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for IBM
DB2 and Oracle.

The supported versions are:

* MySQL 5.0.2 or later
* PostgreSQL 8.3 or later
* SQLite 3.3.7 or later
* Oracle 9.0.1 or later

== Upgrading ==

1.20 has several database changes since 1.19, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons
repository, make sure that it is updated as well. Otherwise, errors may arise
due to database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.
