@@ -51,6 +51,8 @@ production.
   usages of -s and -n parameters depending on compression type
 * (bug 13896) Rendering of devanagari numbers in automatic '#' number lists
 * (bug 18704) Add an unique CSS class or ID to the tagfilter table row at RecentChanges 
+* (bug 33689) Upgrade to 1.19 on Postgres fails due to incomplete query when
+              trying to defer foreign key for externallinks
 
 === API changes in 1.20 ===
 * (bug 34316) Add ability to retrieve maximum upload size from MediaWiki API.
